--- a/042.html
+++ b/042.html
@@ -4,12 +4,12 @@
 
 from = '*' + from + '*'; // make "from" look nicer
 
-alert( from + ': ' + text );
+alert( from + ': ' + text );// jhgjhgjgj
 }
 
 let from = "Ann";
 
-showMessage(from); // *Ann*: Hello
+showMessage(from); // *A1nn*
 
 // the value of "from" is the same, the function modified a local copy
 alert( from ); // Ann</script>
